fix landing page bricks out of bound

--- a/scss/default/site/shopsy_style.scss
+++ b/scss/default/site/shopsy_style.scss
@@ -7327,7 +7327,8 @@ img {
   list-style: none outside none !important;
   position: relative;
   width: 100%;
-  min-height: 200px;
+  // min-height: 200px;
+  min-height: 100%;
 }
 
 #main {
